# de-rust

./: .gitignore  README.md
csv-reader/: Cargo.toml  fruits.csv
csv-reader/src/: main.rs
csv-writer/: .gitignore  Cargo.toml
csv-writer/src/: main.rs
diesel-orm/: .env  Cargo.toml  README.md
diesel-orm/sqlite/: database.db
diesel-orm/src/: lib.rs  main.rs
jupyter-rust/: .gitignore  README.md  polars-dfs-nb.ipynb
parquet-read-write/: Cargo.toml  example.parquet
parquet-read-write/src/: main.rs
polars-dataframes/: .gitignore  Cargo.toml
polars-dataframes/src/: main.rs
rust-state-machine-ia/src/: main.rs
substrate-collectables-workshop/: Cargo.toml
