[package]
name = "diesel-orm"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
# build libsqlite3 as part of the build process
# uncomment this line if you run into setup issues
# libsqlite3-sys = { version = "0.30", features = ["bundled"] }
dotenvy = "0.15"

# libsqlite3-sys will now compile SQLite from source
libsqlite3-sys = { version = "0.30", features = ["bundled"] }